<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".UpdateNoteFragment">

        <TextView
            android:id="@+id/editNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/edit_your_note"
            android:textColor="@color/dark_turquoise"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/editNoteHeading"
            android:layout_marginTop="16dp"
            android:background="@drawable/dark_turquoise_border"
            android:fontFamily="@font/aclonica"
            android:maxLines="1"
            android:padding="12dp"
            android:text="@string/enter_the_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editNoteDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/editNoteTitle"
            android:layout_marginTop="12dp"
            android:background="@drawable/dark_turquoise_border"
            android:fontFamily="@font/aclonica"
            android:gravity="top"
            android:hint="@string/enter_the_description"
            android:padding="12dp"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editNoteFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/turquoise"
            android:clickable="true"
            android:contentDescription="@string/editfab"
            android:focusable="true"
            android:src="@drawable/baseline_done_24"
            android:tintMode="@color/white" />
    </RelativeLayout>

</layout>

