<?xml version="1.0" encoding="utf-8" ?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".AddNoteFragment">

        <TextView
            android:id="@+id/addNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/add_your_note"
            android:textColor="@color/dark_turquoise"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/addNoteHeading"
            android:layout_marginTop="16dp"
            android:background="@drawable/dark_turquoise_border"
            android:fontFamily="@font/aclonica"
            android:hint="@string/enter_the_title"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addNoteDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/addNoteTitle"
            android:layout_marginTop="12dp"
            android:background="@drawable/dark_turquoise_border"
            android:fontFamily="@font/aclonica"
            android:gravity="top"
            android:hint="@string/enter_the_description"
            android:padding="12dp"
            android:textSize="18sp" />

    </RelativeLayout>

</layout>


